--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
+spring.servlet.multipart.max-file-size =-1
+spring.servlet.multipart.max-request-size =-1
