--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
 spring.servlet.multipart.max-file-size =-1
 spring.servlet.multipart.max-request-size =-1
+
+spring.datasource.name=ocr_db
