--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,7 @@ server.servlet.encoding.force=true
 spring.servlet.multipart.max-file-size =-1
 spring.servlet.multipart.max-request-size =-1
 
-spring.datasource.name=ocr_db
+spring.datasource.name=postgres
+
+spring.jpa.show-sql=true
+
