Bugfix, Image remove
-Delete operation fixed for Receipt
-Restart on Request "fixed" or got around
- Image folder emptying
-drop.sql added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.name=postgres
 spring.jpa.hibernate.ddl-auto=update
 
+spring.devtools.restart.enabled=false
+
 spring.jpa.show-sql=true
 
