Auth rework, household system
Auth system changed to asymetric key pair
Household system introduced, Service refactor in progress

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,7 @@ spring.devtools.restart.enabled=false
 spring.jpa.show-sql=true
 
 
-security.jwt.token.secret-key=secret_key
+security.jwt.token.secret-key=cmVjZWlwdF9vY3JfdmFsaWRhdGlvbl9rZXk=
+rsa.private-key=classpath:certs/private.pem
+rsa.public-key=classpath:certs/public.pem
 
