--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,13 @@ spring.devtools.restart.enabled=false
 
 spring.jpa.show-sql=true
 
+# Swagger api config
+springdoc.api-docs.path=/api/swagger-ui/api-docs
+springdoc.swagger-ui.path=/api/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+api.version=0.0.1
+api.name=Receipt_OCR_Api
+
 
 security.jwt.token.secret-key=cmVjZWlwdF9vY3JfdmFsaWRhdGlvbl9rZXk=
 rsa.private-key=classpath:certs/private.pem
