--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,9 @@ spring.devtools.restart.enabled=false
 
 spring.jpa.show-sql=true
 
+server.url=${SERVER_URL}
+python.url=${PYTHON_URL}
+
 # Swagger api config
 springdoc.api-docs.path=/api/swagger-ui/api-docs
 springdoc.swagger-ui.path=/api/swagger-ui.html
@@ -26,4 +29,6 @@ api.name=Receipt_OCR_Api
 security.jwt.token.secret-key=cmVjZWlwdF9vY3JfdmFsaWRhdGlvbl9rZXk=
 rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
+gmail.email=${GOOGLE_APP_EMAIL}
+gmail.password=${GOOGLE_APP_PASSWORD}
 
