--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+version: '0.1'
 
 services:
   postgres:
@@ -11,3 +11,10 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_DB=postgres
+  backend:
+    env_file: "src/main/resources/env_vars.env"
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - '8080:8080'
