--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,13 @@ server.servlet.encoding.force=true
 spring.servlet.multipart.max-file-size =-1
 spring.servlet.multipart.max-request-size =-1
 
+#host.docker.internal
+#localhost
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.datasource.name=postgres
 spring.jpa.hibernate.ddl-auto=update
